fixed copyblock internal spacing for mobile

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -82,8 +82,8 @@ p {
     top: 50%;
     left: 50%;
     height: 30%;
-    width: 70%;
-    margin: -10% 0 0 -35%;
+    width: 80%;
+    margin: -10% 0 0 -40%;
 }
 
 .fullHeight {
